Ensure enough contrast on hovering a tags and fix spacing

--- a/site/assets/styles/base.css
+++ b/site/assets/styles/base.css
@@ -77,7 +77,7 @@ body {
     > main {
         grid-area: main;
         max-width: 800px;
-        padding-top: 5px;
+        margin-top: 5px;
         overflow: hidden;
 
         h1:first-child {
@@ -108,6 +108,7 @@ a {
             -1px 0px 0px 3px var(--item-color),
             1px 0px 0px 3px var(--item-color);
         text-decoration: none;
+        color: white;
     }
 }
 
