--- a/site/assets/styles/colophon.css
+++ b/site/assets/styles/colophon.css
@@ -4,7 +4,7 @@ body {
             line-height: 1;
             float: right;
             width: fit-content;
-            margin: -30px 0 25px 25px;
+            margin: -30px 0 15px 15px;
             font-size: 0.75em;
 
             @media (max-width: 750px) {
